# D_PR

./: .dockerignore  .env.example  .gitattributes  .gitignore  ADR-040-drl-dsr-gate.md  ADR-042-arquitectura-objetivo-librerias.md  AGENTS.md  ARQUITECTURA_Y_APRENDIZAJE.md  AUDITORIA_DEEP_LEARNING.md  CATALOGO_ALPHA_HIPOTESIS.md  CLAUDE.md  DIAGNOSTICO_FABLE5_ARQUITECTURA.md  Dockerfile.brev  Makefile  README.md  RUNBOOK_BREV.md  SEGUIMIENTO.md  bootstrap_brev.sh  docker-compose.brev.yml  gate_ewa_ewc.txt  gate_ko_pep.txt  setup_brev.sh
platform/libs/shared/: __init__.py  db.py  events.py  kafka_client.py  pyproject.toml  redis_client.py  setup.py
platform/services/execution-engine/: Dockerfile  conftest.py  pyproject.toml  requirements.txt
research/: check_alpaca_span.py  gate_btc.txt  gate_pair_spy_qqq.txt  gate_run.txt  gate_spy_post.txt  pyproject.toml  requirements.txt
research/.cursor/: BUGBOT.md
research/alpha/: __init__.py
research/alpha/agents/: __init__.py  dqn_agent.py  dqn_calibration.py  xgb_agent.py
research/alpha/statarb/: __init__.py  pairs.py  screen.py
research/archive/: README.md  diag_nasdaq.py  pipeline.py  session1.py  session2.py  session2_3.py  session2_4.py  session2_5.py  session2_6.py  session2_6b.py  session3_1.py  session3_2.py  session3_3.py  session4.py  session4_diag.py  session5.py  session6.py  session7_1.py  session7_2.py  session7_2_diag.py  test_fix.py  verify_run.py  verify_run2.py
research/backtesting/: engine.py  multi_asset_engine.py
research/cli/: __init__.py  run_nightly_retrain.py  run_pair_gate.py  train_drl.py  train_multi_horizon.py
research/dashboard/: app.py  state.py
research/dashboard/components/: charts.py
research/dashboard/pages/: 1_Walk_Forward.py  2_Hyperopt.py  3_Data_Explorer.py  4_Multi_Horizon.py
research/data/: __init__.py  alpaca_bars.py  drl_dataset.py
research/docs/: ONCHAIN.md  RISK_ENGINE.md
research/envs/: __init__.py  trading_env.py
research/examples/: fetch_4h_crypto.py  pipeline_hyperopt.py  pipeline_ml_real_data.py  run_e1_full.py  run_e5_screening.py  validation_demo.py  validation_demo_fx_futures.py  validation_demo_real_data.py
research/experiments/: __init__.py
research/experiments/btc_eth_eur_4h/: __init__.py  config.py  data_sources.py  run_experiment.py
research/features/: __init__.py  alpaca_compat.py  engineering.py  labeling.py  nan_validator.py  pca_denoiser.py  regime_gmm.py  volatility_target.py
research/features/equities/: __init__.py  earnings_calendar.py  factor_exposures.py  sector_neutralizer.py
research/instruments/: __init__.py  catalog.py  specs.py
research/metrics/: __init__.py  advanced.py  objective.py
research/models/: ablative_analysis.py  calibration.py  entry_filter.py  error_analysis.py  feature_selection.py  hyperopt.py  meta_labeler.py  metrics.py  nn_layers.py  rl_agent.py  validation.py  walk_forward_runner.py  zoo.py
research/models/drift/: __init__.py  bucketizer.py  ece.py  ks_test.py  psi.py
research/models/drl/: __init__.py  backbone.py  dqn.py  dqn_trainer.py  dsr_gate.py  e1_baseline_comparison.py  e2_lambda_sweep.py  e4_power_diagnostics.py  e6_benchmark_spa.py  multi_algo_gate.py  ppo.py  reward_search.py  sac.py
research/models/multi_horizon/: __init__.py  feature_sets.py  horizon_config.py  registry_adapter.py  reports.py  trainer.py
research/pipelines/: __init__.py  nightly_retrain.py  train_all.py
research/portfolio/: __init__.py  sizing.py
research/reporting/: __init__.py  report.py
research/risk/: bayesian_sizer.py  dynamic_rr.py  gate.py  kelly.py  management.py  sizing_multi_asset.py
research/tests/: test_a003_dqn_calibrator_wiring.py  test_alpaca_bars.py  test_alpaca_compat.py  test_alpaca_universe.py  test_alpha_agents.py  test_bayesian_sizer.py  test_calibration.py  test_deep_learning.py  test_drl_backbone.py  test_drl_dataset.py  test_drl_dqn.py  test_drl_dqn_trainer.py  test_drl_ppo.py  test_drl_sac.py  test_dsr_gate.py  test_dsr_n_trials_correction.py  test_dynamic_rr.py  test_e1_baseline.py  test_e2_lambda_sweep.py  test_e4_power.py  test_e6_benchmark_spa.py  test_entry_filter.py  test_experiment_btc_eth_eur_4h.py  test_feature_sets_disjoint.py  test_hyperopt.py  test_kelly.py  test_meta_labeler.py  test_metrics.py  test_metrics_cs229.py  test_multi_algo_gate.py  test_multi_asset.py  test_multi_horizon_trainer.py  test_nan_validator.py  test_nightly_retrain.py  test_no_leakage.py  test_no_leakage_multi_horizon.py  test_pair_screening.py  test_pair_statarb.py  test_pca_denoiser.py  test_position_sizer.py  (+12 more)
research/tests/test_drift/: test_ece.py  test_psi.py
research/tools/: __init__.py  list_models.py
research/universe/: __init__.py  alpaca_equity_universe.py
shared/: pyproject.toml
shared/.cursor/: BUGBOT.md
shared/quant_shared/: __init__.py  contracts.py  symbols.py
shared/quant_shared/calendar/: __init__.py  errors.py  feature_encoding.py  market_calendar.py  session_phase.py
shared/quant_shared/features/: __init__.py  compute.py  definitions.py  validators.py
shared/quant_shared/models/: __init__.py  registry.py  (+1 more)
shared/tests/: test_features_parity.py  test_market_calendar.py  test_orders_schema.py
tools/: __init__.py  conftest.py  git_push_session.sh  pyproject.toml
tools/briefing/: __init__.py  daily.py  discord_formatter.py  metrics_collector.py  postgres_backend.py  prom_client.py  renderer.py  scheduler.py  slack_formatter.py  weekly.py  wiring.py
tools/incidents/: template.md
tools/mcp/: discord_mcp.py  list_channels_cli.py
tools/smoke/: __init__.py  alerts_check.py  config.py  db_schema_check.py  kafka_topics_check.py  service_health.py  test_post_deploy_smoke.py
(+292 files in other folders)
