[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research"
version = "0.1.0"
description = "Research & backtesting — quant_bot monorepo"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "joblib>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
    # Explainability
    "shap>=0.44",
    # Hyperopt
    "optuna>=3.0",
    # DRL environments (ADR-037)
    "gymnasium>=0.29",
    # Deep learning — incluido en core; instalar con CUDA opcionalmente via [dl]
    "torch>=2.0",
]

[project.optional-dependencies]
# pip install -e "../shared" primero, luego pip install -e ".[data]"
data = [
    "ccxt>=4.0",
    "yfinance>=0.2.50",
]
dashboard = [
    "streamlit>=1.35",
    "plotly>=5.0",
]
dl = [
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]
all = [
    "quant-research[data,dashboard,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "models*",
    "features*",
    "risk*",
    "backtesting*",
    "metrics*",
    "reporting*",
    "instruments*",
    "dashboard*",
    "pipelines*",
    "alpha*",
    "portfolio*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
ng_imports = true