[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-shared"
version = "0.1.0"
description = "Shared library — feature definitions, schemas, model registry (quant_bot monorepo)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pandas_market_calendars>=4.4,<5",  # pin major: holidays anuales, revisar en S12
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_shared*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["quant_shared.calendar"]

[[tool.mypy.overrides]]
module = ["pandas.*", "pandas_market_calendars.*"]
ignore_missing_imports = true
