[project]
name = "quant-bot-tools"
version = "0.1.0"
description = "Ops scaffolding — smoke tests, briefings, incident templates"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
    "confluent-kafka>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "types-PyYAML",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["briefing/tests", "smoke"]
pythonpath = [".", ".."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
packages = ["briefing", "smoke"]

[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "confluent_kafka.admin",
    "psycopg2.*",
]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["briefing*", "smoke*"]
exclude = ["incidents*", "incidents.*", "*.tests", "*.tests.*"]