[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "los-ojos-shared"
version = "1.0.0"
description = "Shared library for Los Ojos microservices"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "aiokafka>=0.11.0",
    "redis[hiredis]>=5.0.6",
    "asyncpg>=0.29.0",
    "motor>=3.4.0",
    "structlog>=24.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
