[project]
name = "execution-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.3.0",
    "aiokafka>=0.11.0",
    "asyncpg>=0.29.0",
    "structlog>=24.2.0",
    "tenacity>=8.0",
    "aiolimiter>=1.1",
    "alpaca-py>=0.20.0",
    "ccxt>=4.3.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath   = ["."]
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
mypy_path = ["../../../shared"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["alpaca.*", "prometheus_client.*"]
ignore_missing_imports = true
